--- a/src/app/pages/communyts/communyts.component.html
+++ b/src/app/pages/communyts/communyts.component.html
@@ -12,135 +12,10 @@
     </div>
 </section>
 <section style="display: block; margin-top: 50px; margin-bottom: 50px;">
-	<div class="row">
-		<div class="col-sm-12">
-			<div id="mapdiv" style="width: 100%; height: 600px;"></div>
-		</div>
-	</div>
-</section>
-<section id="service" class="service" style="padding-bottom:50px;">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="main_service_area">
-					<div class="main_service_content">
-						<div class="service_tabe">
-							<!-- Nav tabs -->
-							<ul class="service_tabe_menu nav nav-tabs" role="tablist" style="padding-left: 10%;">
-								<li role="presentation" class="active">
-									<a href="#concilia-aba" aria-controls="concilia-aba" role="tab" data-toggle="tab">
-										<i class="fa fa-info" aria-hidden="true"></i><br/>
-										BANCO DE <br> IMÓVEIS
-									</a>
-								</li>
-								<li role="presentation"><a href="#rodovias-aba" aria-controls="rodovias-aba" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />LOCALIZAÇÃO <br> IMÓVEIS</a></li>
-								<li role="presentation"><a href="#programa-aba" aria-controls="programa-aba" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />CARACTERÍSTICAS <br> DOS IMÓVEIS</a></li>
-								<li role="presentation"><a href="#reassentamento-aba" aria-controls="reassentamento-aba" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />DESTINAÇÃO DOS <br> IMÓVEIS</a></li>
-
-							</ul>
-
-							<!-- Tab panes -->
-							<div class="tab-content" style="margin-top: 50px;">
-								<div role="tabpanel" class="tab-pane active" id="concilia-aba">
-									<div class="single_service_tab">
-										<div class="row">
-											<div class="col-sm-6">
-												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>O concilia</h3>
-														<div class="separator"></div>
-													</div>
-													<p style="font-size: 1.24rem;">O <strong>Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381</strong> - foi criado em função da necessidade de revitalização dessas rodovias. É uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), em parceria com Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Associação das Comunidades de Moradores de Áreas de Risco de Belo Horizonte (CMAR).</p>
-												</div>
-											</div>
-
-											<div class="col-sm-6">
-												<div class="single_tab_img">
-													<img src="assets/images/mapa.jpg" alt="" />
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div role="tabpanel" class="tab-pane" id="rodovias-aba">
-									<div class="single_service_tab">
-										<div class="row">
-											<div class="col-sm-6">
-												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>As rodovias</h3>
-														<div class="separator"></div>
-													</div>
-													<p style="font-size: 1.24rem;">O Anel Rodoviário de Belo Horizonte e a BR-381 Norte são importantes rodovias para Minas Gerais, onde transitam cerca de 154 mil veículos por dia, segundo dados de 2013 da Polícia Rodoviária Federal. O tráfego existente já ultrapassou o volume planejado para a rodovia quando de sua contrução, em 1950.</p>
-
-													<p style="font-size: 1.24rem;">De acordo com a PRF, os 27 km do Anel Rodoviário de Belo Horizonte e os 303 km da BR-381 Norte (trecho de BH a Governador Valadares) são parte da malha rodoviária mineira com o maior índice de acidentes no estado. Para aumentar a capacidade de tráfego das rodovias, foram projetadas obras de melhoria em diversos trechos. A execução das obras depende da remoção de muitas famílias que ocuparam as faixas de domínio e passaram a viver às margens das rodovias.</p>
-												</div>
-											</div>
-
-											<div class="col-sm-6">
-												<div class="single_tab_img">
-													<img src="assets/images/featureslid1.jpg" alt="" />
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div role="tabpanel" class="tab-pane" id="programa-aba">
-									<div class="single_service_tab">
-										<div class="row">
-											<div class="col-sm-6">
-												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>O programa</h3>
-														<div class="separator"></div>
-													</div>
-													<p style="font-size: 1.24rem;">O Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381 - é uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT). Ele teve início em 2013, fruto de uma Ação Civil Pública (ACP nº 57367-09.2013.4.01.3800) ajuizada pelo Ministério Público Federal (MPF) e Defensoria Pública da União (DPU), que se uniram em favor das diversas comunidades afetadas pelas obras na BR-381 e no Anel Rodoviário.</p>
-
-													<p style="font-size: 1.24rem;">O Programa consiste em remover e reassentar os moradores que residem na faixa de domínio das rodovias. O Concilia realiza acompanhamento multidisciplinar das famílias em todo processo de desapropriação e reassentamento (Pré Morar e Pós Morar). As atividades tiveram início em 2014 e contam com parcerias de instituições públicas e apoio da sociedade civil organizada.</p>
-												</div>
-											</div>
-
-											<div class="col-sm-6">
-												<div class="single_tab_img">
-													<img src="assets/images/stab1.png" alt="" />
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div role="tabpanel" class="tab-pane" id="reassentamento-aba">
-									<div class="single_service_tab">
-										<div class="row">
-											<div class="col-sm-6">
-												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>O Reassentamento</h3>
-														<div class="separator"></div>
-													</div>
-													<p style="font-size: 1.24rem;">O reassentamento dos moradores atende a critérios indicados pela Justiça Federal e garantem os direitos e a inserção social das famílias cadastradas no Programa.</p>
-
-													<p style="font-size: 1.24rem;">Os moradores cadastrados contam com atividades sociais e educativas voltadas para a geração de emprego e renda e preparação para sua insersão no novo contexto social. O Programa trabalha com três modalidades de reassentamento: indenização, compra assistida e nova unidade habitacional.</p>
-
-													<p style="font-size: 1.24rem;">Na etapa do reassentamento iniciada em 2017, o Concilia BR-381 e Anel oferece duas modalidades de aquisição: compra assistida e indenização. Na modalidade compra assistida, é feita uma análise de habitabilidade de acordo com o perfil de cada núcleo familiar.</p>
-
-													<p style="font-size: 1.24rem;">O DNIT é o responsável pela indenização e aquisição de imóveis disponíveis em Belo Horizonte, região metropolitana e outros municípios.</p>
-												</div>
-											</div>
-
-											<div class="col-sm-6">
-												<p style="font-size: 1.24rem;">A etapa de 2017 se caracteriza pelo reassentamento prioritário de 264 famílias. Para 2018, está previsto o reassentamento de outras 1.090 famílias. As ações são pautadas em um Plano de Providências, documento que orienta e ajuda a viabilizar o reassentamento definitivo das famílias.</p>
-												<div class="single_tab_img">
-													<img src="assets/images/featureslid1.jpg" alt="" />
-												</div>
-											</div>
-											<!--                                                        <div id="pentagon"></div>-->
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				<div id="mapdiv" style="width: 100%; height: 600px;"></div>
 			</div>
 		</div>
 	</div>
@@ -157,7 +32,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-							<img src="assets/images/criterios_regras.jpg" alt="">
+							<img src="assets/images/selagem01.jpg" alt="">
                         </div><br>
                         <div class="col-sm-6">
                             <p class="font-124">Um dos diferenciais desse programa de reassentamento é o acompanhamento das famílias em todo o processo de mudança. São levadas em consideração as especificidades de cada núcleo familiar como a presença de idosos, adultos, crianças, adolescentes ou pessoas portadoras de algum tipo de deficiência.</p>
@@ -182,35 +57,35 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="main_about_area sections" style="padding-top:0;">
+			<div class="main_about_area sections" style="padding-top:0;padding-bottom: 85px;">
 				<div class="col-sm-6">
 					<p class="font-124">As famílias das comunidades beneficiadas pelo Concilia BR-381 e Anel passam pelo processo de cadastramento e selagem das moradias. Durante essa ação, as moradias recebem um selo (que dá origem ao nome do processo) com um número de identificação do imóvel. Estas e outras informações fornecerão subsídios para a Justiça Federal nas audiências de conciliação. Todas as moradias que participam do cadastramento recebem um documento de identificação e um selo afixado na porta da residência com uma sequência numérica.</p>
 					<p class="font-124">Durante a atividade, é feito um levantamento arquitetônico, medição dos imóveis, avaliação das benfeitorias das moradias, análise de vulnerabilidade dos moradores, cadastro social das famílias, croqui técnico e registro fotográfico. Em termos genéricos, pode-se compreender esse processo como um registro das realidades física e social identificadas em campo.</p>
 					<p class="font-124">Após o trabalho de medição técnica e avaliação social, é feita a aplicação do diagnóstico social - cadastro mais extenso com informações referentes às necessidades da Vila. Com a finalização da selagem é feito o congelamento das moradias situadas às margens da rodovia.</p>
-					<p class="font-124">Os moradores são orientados a não expandir suas edificações nem realizar nenhuma modificação estética ou estrutural.</p>
-					<p class="font-124">As benfeitorias feitas após a data da selagem não serão levadas em consideração na avaliação do imóvel durante as Audiências de Conciliação. Os problemas identificados durante a selagem são registrados pelos técnicos e, aqueles que necessitam de atendimentos sistematizados, são direcionados às equipes responsáveis.</p>
 				</div>
 				<div class="col-sm-6">
-						<img src="assets/images/plano_providencias.jpg" alt="" style="max-width: inherit;">
+					<p class="font-124">Os moradores são orientados a não expandir suas edificações nem realizar nenhuma modificação estética ou estrutural.</p>
+					<p class="font-124">As benfeitorias feitas após a data da selagem não serão levadas em consideração na avaliação do imóvel durante as Audiências de Conciliação. Os problemas identificados durante a selagem são registrados pelos técnicos e, aqueles que necessitam de atendimentos sistematizados, são direcionados às equipes responsáveis.</p>
+					<img src="assets/images/selagem02.jpg" alt="">
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<section id="features" class="features">
+<section id="features" class="features" style="padding-top: 25px;">
     <div class="container">
         <div class="row">
 			<div class="col-sm-12">
 	            <div class="head_title" style="margin-bottom: 50px;">
-	                <h3 style="font-size: 3rem; text-align: center">CMAR - COMUNIDADE DE MORADORES EM ÁREAS DE RISCO</h3>
+	                <h3 style="font-size: 3rem; text-align: center;line-height: initial;">CMAR - COMUNIDADE DE MORADORES <br /> EM ÁREAS DE RISCO</h3>
 	                <div class="separator"></div>
 	            </div>
 	        </div>
             <div class="col-sm-12">
-                <div class="main_features_area sections" style="">
+                <div class="main_features_area sections" style="padding-top: 25px;padding-bottom: 100px;">
                     <div class="row">
                         <div class="col-sm-6">
-							<img src="assets/images/criterios_regras.jpg" alt="">
+							<img src="assets/images/cmar001.png" alt="" style="margin-top:5%;">
                         </div><br>
                         <div class="col-sm-6">
                             <p class="font-124">O movimento Comunidade de Moradores em Áreas de Risco (CMAR) se constituiu após a divulgação da notificação de desapropriação dos moradores do Anel Rodoviário de Belo Horizonte em função das obras de revitalização da via.</p>
@@ -225,33 +100,16 @@
 <section id="about" class="about">
 	<div class="container">
 		<div class="row">
-			<div class="main_about_area sections">
+			<div class="main_about_area sections" style="padding-top: 0;">
 				<div class="col-sm-6">
 					<p class="font-124">Os moradores passaram a se organizar cada vez mais com a adesão de um número crescente de comunidades ao CMAR. Desta forma aumentaram o poder de barganha nas negociações com os órgãos e entidades governamentais.</p>
 					<p class="font-124">As comunidades se reuniram no CMAR por uma causa comum. Todas as lideranças comunitárias buscavam uma soluçao que atendesse o conjunto de todas as famílias atingidas pelas obras de melhoria das rodovias BR-381 e Anel Rodoviário.</p>
+					<p class="font-124">No segundo semestre de 2016, o CMAR contava com a participação das Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação, no movimento em favor da desapropriação e reassentamento humanizados, consolidado no programa Concilia BR-381 e Anel.</p>
 				</div>
 				<div class="col-sm-6">
-						<img src="assets/images/plano_providencias.jpg" alt="" style="max-width: inherit;">
+						<img src="assets/images/cmar002.png" alt="" >
 				</div>
 			</div>
 		</div>
 	</div>
-</section>
-<section id="features" class="features">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="main_features_area sections">
-                    <div class="row">
-                        <div class="col-sm-6">
-							<img src="assets/images/criterios_regras.jpg" alt="" style="padding-top:10%">
-                        </div><br>
-                        <div class="col-sm-6">
-                            <p class="font-124">No segundo semestre de 2016, o CMAR contava com a participação das Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação, no movimento em favor da desapropriação e reassentamento humanizados, consolidado no programa Concilia BR-381 e Anel.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
