--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -32,7 +32,7 @@
                                                     <i class="fa fa-home"></i>
                                                 </div>
                                                 <div class="single_info_text">
-                                                    <h3>Visite-nos</h3>
+                                                    <h3>Venha nos visitar</h3>
                                                     <p>Rua Sapucaí, 571, bairro Floresta, Belo Horizonte - MG</p>
                                                 </div>
                                             </div>
@@ -54,7 +54,7 @@
                                                     <i class="fa fa-mobile"></i>
                                                 </div>
                                                 <div class="single_info_text">
-                                                    <h3>Ligue-nos</h3>
+                                                    <h3>Ligue para nós</h3>
                                                     <p>(31) 3224-7704 </p>
                                                 </div>
                                             </div>
@@ -77,7 +77,7 @@
 
                         <div class="col-sm-6">
                             <div class="head_title">
-                                <h3>ENVIE MENSAGEM, LIGUE OU VENHA NOS VISITAR</h3>
+                                <h3>ENVIE A SUA MENSAGEM POR AQUI</h3>
                                 <div class="separator"></div>
                             </div>
                             <div class="single_contant_left">
