--- a/src/app/pages/executive-council/executive-council.component.html
+++ b/src/app/pages/executive-council/executive-council.component.html
@@ -26,25 +26,26 @@
 		<div class="row">
 			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
 				<div class="col-sm-6">
+					<img src="assets/images/executive_concil.jpg" alt="" style="margin-bottom:20px;">
 					<p class="font-124">Para minimizar os conflitos e facilitar o entendimento entre os diversos atores que compõem o Concilia BR-381 e Anel foi criado um Conselho Executivo, de caráter deliberativo, cuja principal função é buscar o consenso entre seus membros.</p>
-					<p class="font-124">O Comitê acompanha das diversas ações do programa e é responsável pelo gerenciamento do Plano de Providências.Do plano, elaborado pelo DNIT, constam as ações e soluções para viabilizar o reassentamento das famílias Concilia.</p>
 				</div>
 				<div class="col-sm-6">
+					<!-- <p class="font-124">Para minimizar os conflitos e facilitar o entendimento entre os diversos atores que compõem o Concilia BR-381 e Anel foi criado um Conselho Executivo, de caráter deliberativo, cuja principal função é buscar o consenso entre seus membros.</p> -->
+					<p class="font-124">O Comitê acompanha das diversas ações do programa e é responsável pelo gerenciamento do Plano de Providências.Do plano, elaborado pelo DNIT, constam as ações e soluções para viabilizar o reassentamento das famílias Concilia.</p>
+				<!-- </div>
+				<div class="col-sm-6"> -->
 					<p class="font-124">Foram estabelecidos critérios e regras que orientam e facilitam a execução do Programa em cada uma de suas etapas. Essas diretrizes foram elaboradas pelos parceiros, revisadas pelos membros do Conselho Executivo e homologadas pela Justiça Federal.</p>
 					<p class="font-124">O Comitê é composto por um representante de cada instituição parceira do Concilia BR-381 e Anel, que se reunem periodicamente e em situações extraordinárias quando necessário.</p>
 					<p class="font-124">As deliberações do Conselho Executivo vão desde a conciliação e o cumprimento do Acordo Judicial homologado em juízo até a análise de casos excepcionais e decisões estratégicas.</p>
-				</div>
-				<div class="col-sm-12">
-						<img src="assets/images/executive_concil.jpg" alt="">
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<a target="_blank" href="#">
+				<a target="_blank" href="{{docExecCouncil}}">
 					<b>
 						 <h5 class="text-center" style="margin:50px"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>&nbsp;&nbsp;
-							Acesse regimento do Conselho Executivo
+							Acesse o regimento do Conselho Executivo
 						</h5>
 					</b>
 				</a>
