--- a/src/app/pages/home/timeline/timeline.component.html
+++ b/src/app/pages/home/timeline/timeline.component.html
@@ -38,7 +38,52 @@
 
 						<div class="tl-content">
 							<h1>{{item.title}}</h1>
-							<p>{{item.text}}</p>
+							<p style="font-size: 1.24rem;">{{item.text}}</p>
+						</div>
+
+					</div>
+				</div>
+				<div *ngFor="let item of events" class="item">
+					<div class="tl-item">
+						<div class="tl-bg" [ngStyle]="{'background-image': 'url(' + item.image + ')'}"></div>
+
+						<div class="tl-year">
+							<p class="f2 heading--sanSerif">{{item.date | humanizeDate}}</p>
+						</div>
+
+						<div class="tl-content">
+							<h1>{{item.title}}</h1>
+							<p style="font-size: 1.24rem;">{{item.text}}</p>
+						</div>
+
+					</div>
+				</div>
+				<div *ngFor="let item of events" class="item">
+					<div class="tl-item">
+						<div class="tl-bg" [ngStyle]="{'background-image': 'url(' + item.image + ')'}"></div>
+
+						<div class="tl-year">
+							<p class="f2 heading--sanSerif">{{item.date | humanizeDate}}</p>
+						</div>
+
+						<div class="tl-content">
+							<h1>{{item.title}}</h1>
+							<p style="font-size: 1.24rem;">{{item.text}}</p>
+						</div>
+
+					</div>
+				</div>
+				<div *ngFor="let item of events" class="item">
+					<div class="tl-item">
+						<div class="tl-bg" [ngStyle]="{'background-image': 'url(' + item.image + ')'}"></div>
+
+						<div class="tl-year">
+							<p class="f2 heading--sanSerif">{{item.date | humanizeDate}}</p>
+						</div>
+
+						<div class="tl-content">
+							<h1>{{item.title}}</h1>
+							<p style="font-size: 1.24rem;">{{item.text}}</p>
 						</div>
 
 					</div>
