--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -22,14 +22,34 @@
 							<ul class="service_tabe_menu nav nav-tabs" role="tablist">
 								<li role="presentation" class="active">
 									<a href="#concilia-aba" aria-controls="concilia-aba" role="tab" data-toggle="tab">
-										<i class="fa fa-info" aria-hidden="true"></i><br/>
+										<i class="fa fa-home" aria-hidden="true"></i><br />
 										BANCO DE <br> IMÓVEIS
 									</a>
 								</li>
-								<li role="presentation"><a href="#rodovias-aba" aria-controls="rodovias-aba" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />LOCALIZAÇÃO <br> IMÓVEIS</a></li>
-								<li role="presentation"><a href="#programa-aba" aria-controls="programa-aba" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />CARACTERÍSTICAS <br> DOS IMÓVEIS</a></li>
-								<li role="presentation"><a href="#reassentamento-aba" aria-controls="reassentamento-aba" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />DESTINAÇÃO DOS <br> IMÓVEIS</a></li>
-								<li role="presentation"><a href="#conciliacao-aba" aria-controls="conciliacao-aba" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br />ACESSO AOS<br> IMÓVEIS</a></li>
+								<li role="presentation">
+									<a href="#rodovias-aba" aria-controls="rodovias-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-map-marker"></i> <br />
+										LOCALIZAÇÃO <br> IMÓVEIS
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#programa-aba" aria-controls="programa-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-th-list" aria-hidden="true"></i> <br />
+										CARACTERÍSTICAS <br> DOS IMÓVEIS
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#reassentamento-aba" aria-controls="reassentamento-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-location-arrow" aria-hidden="true"></i> <br />
+										DESTINAÇÃO DOS <br> IMÓVEIS
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#conciliacao-aba" aria-controls="conciliacao-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-sign-in" aria-hidden="true"></i> <br />
+										ACESSO AOS<br> IMÓVEIS
+									</a>
+								</li>
 
 							</ul>
 
@@ -38,12 +58,14 @@
 								<div role="tabpanel" class="tab-pane active" id="concilia-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">BANCO DE IMÓVEIS</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>BANCO DE IMÓVEIS</h3>
-														<div class="separator"></div>
-													</div>
 													<p style="font-size: 1.24rem;">A etapa de 2017 do Concilia BR 381 e Anel, voltada ao reassentamento de 264 famílias, deu prioridade àquelas sob regime de aluguel social. Nesta etapa, foi usada, prioritariamente, em especial para as comunidades Vila da Paz, Vila da Luz, Vila Pica-pau e Vila Bom Retiro, a modalidade de compra assistida.</p>
 													<p style="font-size: 1.24rem;">Para contemplar as famílias da maneira mais eficiente e rápida possível, foi criado Banco de Imóveis formado por aqueles disponíveis no mercado, no âmbito de algumas regiões no entorno da capital mineira (Belo Horizonte). Os imóveis também obedecem a critérios mínimos básicos definidos para as necessidades das famílias após análise e avaliação dos seus cadastros.</p>
 													<p style="font-size: 1.24rem;">Nesse caso da etapa de 2017, as famílias tiveram a possibilidade de escolher entre tipos de unidade habitacional como apartamentos e/ou casas.</p>
@@ -53,7 +75,7 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
-													<img src="assets/images/mapa.jpg" alt="" />
+													<img src="assets/images/banco-imoveis.jpg" alt="" />
 												</div>
 											</div>
 										</div>
@@ -62,12 +84,15 @@
 								<div role="tabpanel" class="tab-pane" id="rodovias-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">LOCALIZAÇÃO DOS IMÓVEIS</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>LOCALIZAÇÃO DOS IMÓVEIS</h3>
-														<div class="separator"></div>
-													</div>
+
 													<p style="font-size: 1.24rem;">Para a etapa de 2017 do Concilia BR 381 e Anel, ficou estabelecido que os imóveis destinados à compra assistida seriam os localizados na Região Metropolitana de Belo Horizonte ou no Colar Metropolitano da Região de Belo Horizonte, conforme relação dos municípios a seguir:</p><br>
 													<ul class="single_ab_mision">
 														<li class="font-124">
@@ -93,12 +118,15 @@
 								<div role="tabpanel" class="tab-pane" id="programa-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">CARACTERÍSTICAS DOS IMÓVEIS</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>CARACTERÍSTICAS DOS IMÓVEIS</h3>
-														<div class="separator"></div>
-													</div>
+
 													<p style="font-size: 1.24rem;">Critérios e características necessários para fazer parte do Banco de Imóveis:</p>
 													<ul class="single_ab_mision">
 														<li class="font-124">
@@ -123,7 +151,7 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
-													<img src="assets/images/stab1.png" alt="" />
+													<img src="assets/images/caracteristicas-imoveis.jpg" alt="" />
 												</div>
 											</div>
 										</div>
@@ -132,12 +160,15 @@
 								<div role="tabpanel" class="tab-pane" id="reassentamento-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">DESTINAÇÃO DOS IMÓVEIS</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>DESTINAÇÃO DOS IMÓVEIS</h3>
-														<div class="separator"></div>
-													</div>
+
 													<p style="font-size: 1.24rem;">O programa Concilia BR-381 e Anel busca sempre o imóvel que mais se adeque a cada unidade familiar. Para nortear a melhor destinação, o programa busca atender os seguintes critérios:</p>
 
 													<ol type="A">
@@ -154,22 +185,23 @@
 														</li>
 														<li class="list-alpha-numeric font-124">
 															<p class="font-124"><b>localização: </b> prioridade de escolha por determinada região para as famílias que atenderem ao maior número dos critérios abaixo:</p>
-															 <ul style="list-style-type: disc; margin-left: 4.5rem;">
+															 <!-- <ul style="list-style-type: disc; margin-left: 4.5rem;">
 																<li><p class="justfy-text font-124">existência de pessoa da família em acompanhamento médico, de instituição de assistência social ou educacional com necessidades que não possam ser garantidas em outras regiões;</p></li>
-															</ul>
+															</ul> -->
 														</li>
 													</ol>
 												</div>
 											</div>
 											<div class="col-sm-6">
 												<ul style="list-style-type: disc; margin-left: 4.5rem;">
+													<li><p class="justfy-text font-124">existência de pessoa da família em acompanhamento médico, de instituição de assistência social ou educacional com necessidades que não possam ser garantidas em outras regiões;</p></li>
 													<li><p class="justfy-text font-124">existência de idosos ou pessoas da família inseridos na rede social de determinada região;</p></li>
 													<li><p class="justfy-text font-124">existência de familiares que prestem apoio ou assistência à família em determinada região;</p></li>
 													<li><p class="justfy-text font-124">vínculo profissional com determinada região;</p></li>
 													<li><p class="justfy-text font-124">existência de serviços na região de destino que sejam essenciais à inclusão social da família.</p></li>
 												</ul>
 												<div class="single_tab_img">
-													<img src="assets/images/featureslid1.jpg" alt="" />
+													<img src="assets/images/localizacao.jpg" alt="" style="margin-top:20px;" />
 												</div>
 											</div>
 											<!--                                                        <div id="pentagon"></div>-->
@@ -179,12 +211,15 @@
 								<div role="tabpanel" class="tab-pane" id="conciliacao-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">ACESSO AOS IMÓVEIS</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>ACESSO AOS IMÓVEIS</h3>
-														<div class="separator"></div>
-													</div>
+
 													<p style="font-size: 1.24rem;">O acesso aos imóveis é facilitado por um registro fotográfico dos imóveis existentes no Banco de Imóveis para que as famílias tenham maior facilidade de visualização durante o procedimento de escolha.</p>
 
 													<p style="font-size: 1.24rem;">Outra medida para facilitar a escolha é a apresentação de uma relação dos equipamentos públicos na região dos imóveis.</p>
