--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -25,12 +25,17 @@
 								<div role="tabpanel" class="tab-pane active" id="concilia-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="col-sm-12">
+												<div class="head_title" style="margin-bottom: 10px;">
+													<h3 class="font2-3">Concilia</h3>
+													<div class="separator"></div>
+												</div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>O concilia</h3>
-														<div class="separator"></div>
-													</div>
+
 													<p style="font-size: 1.24rem;">O <strong>Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381</strong> - foi criado em função da necessidade de revitalização dessas rodovias. É uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), em parceria com Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Associação das Comunidades de Moradores de Áreas de Risco de Belo Horizonte (CMAR).</p>
 												</div>
 											</div>
@@ -46,12 +51,17 @@
 								<div role="tabpanel" class="tab-pane" id="rodovias-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="col-sm-12">
+												<div class="head_title" style="margin-bottom: 10px;">
+													<h3 class="font2-3">Rodovias</h3>
+													<div class="separator"></div>
+												</div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>As rodovias</h3>
-														<div class="separator"></div>
-													</div>
+
 													<p style="font-size: 1.24rem;">O Anel Rodoviário de Belo Horizonte e a BR-381 Norte são importantes rodovias para Minas Gerais, onde transitam cerca de 154 mil veículos por dia, segundo dados de 2013 da Polícia Rodoviária Federal. O tráfego existente já ultrapassou o volume planejado para a rodovia quando de sua contrução, em 1950.</p>
 
 													<p style="font-size: 1.24rem;">De acordo com a PRF, os 27 km do Anel Rodoviário de Belo Horizonte e os 303 km da BR-381 Norte (trecho de BH a Governador Valadares) são parte da malha rodoviária mineira com o maior índice de acidentes no estado. Para aumentar a capacidade de tráfego das rodovias, foram projetadas obras de melhoria em diversos trechos. A execução das obras depende da remoção de muitas famílias que ocuparam as faixas de domínio e passaram a viver às margens das rodovias.</p>
@@ -69,12 +79,17 @@
 								<div role="tabpanel" class="tab-pane" id="programa-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="col-sm-12">
+												<div class="head_title" style="margin-bottom: 10px;">
+													<h3 class="font2-3">Programa</h3>
+													<div class="separator"></div>
+												</div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>O programa</h3>
-														<div class="separator"></div>
-													</div>
+
 													<p style="font-size: 1.24rem;">O Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381 - é uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT). Ele teve início em 2013, fruto de uma Ação Civil Pública (ACP nº 57367-09.2013.4.01.3800) ajuizada pelo Ministério Público Federal (MPF) e Defensoria Pública da União (DPU), que se uniram em favor das diversas comunidades afetadas pelas obras na BR-381 e no Anel Rodoviário.</p>
 
 													<p style="font-size: 1.24rem;">O Programa consiste em remover e reassentar os moradores que residem na faixa de domínio das rodovias. O Concilia realiza acompanhamento multidisciplinar das famílias em todo processo de desapropriação e reassentamento (Pré Morar e Pós Morar). As atividades tiveram início em 2014 e contam com parcerias de instituições públicas e apoio da sociedade civil organizada.</p>
@@ -92,12 +107,16 @@
 								<div role="tabpanel" class="tab-pane" id="reassentamento-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="col-sm-12">
+												<div class="head_title" style="margin-bottom: 10px;">
+													<h3 class="font2-3">Reassentamento</h3>
+													<div class="separator"></div>
+												</div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>O Reassentamento</h3>
-														<div class="separator"></div>
-													</div>
 													<p style="font-size: 1.24rem;">O reassentamento dos moradores atende a critérios indicados pela Justiça Federal e garantem os direitos e a inserção social das famílias cadastradas no Programa.</p>
 
 													<p style="font-size: 1.24rem;">Os moradores cadastrados contam com atividades sociais e educativas voltadas para a geração de emprego e renda e preparação para sua insersão no novo contexto social. O Programa trabalha com três modalidades de reassentamento: indenização, compra assistida e nova unidade habitacional.</p>
@@ -121,12 +140,16 @@
 								<div role="tabpanel" class="tab-pane" id="conciliacao-aba">
 									<div class="single_service_tab">
 										<div class="row">
+											<div class="col-sm-12">
+												<div class="head_title" style="margin-bottom: 10px;">
+													<h3 class="font2-3">Conciliação</h3>
+													<div class="separator"></div>
+												</div>
+											</div>
+										</div>
+										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<div class="head_title" style="margin-bottom: 10px;">
-														<h3>Conciliação</h3>
-														<div class="separator"></div>
-													</div>
 													<p style="font-size: 1.24rem;">A principal função da Conciliação é a realização de um acordo que evite conflitos entre as partes. As partes envolvidas comunicam ao órgão competente, ou são chamadas por este Órgão, para que seja firmado um acordo, ou seja, para buscar a conciliação. A Justiça Federal marca uma audiência e, diante do conciliador, as partes entram em acordo e anunciam a solução encontrada.</p>
 
 													<p style="font-size: 1.24rem;">Os acordos firmados têm uma validade jurídica, uma vez que seus termos são levados à homologação judicial. A Conciliação é feita com cada família a ser removida e reassentada e os conciliadores podem fazer sugestões ou até mesmo propor soluções para o conflito.</p>
