--- a/src/app/pages/home/highlights-news/highlights-news.component.html
+++ b/src/app/pages/home/highlights-news/highlights-news.component.html
@@ -1,15 +1,15 @@
 <section id="portfolio" class="portfolio lightbg" style="padding-top:100px;padding-bottom:50px">
 	<div class="container-fluid">
         <div class="row">
-                <div class="col-md-offset-1 col-sm-6">
-                    <div class="head_title">
-                        <h3 class="font-3rem">EM DESTAQUE</h3>
+                <div class="col-sm-6">
+                    <div class="head_title" style="margin-left: 15px;">
+                        <h3 class="font-3rem">Últimas notícias</h3>
                         <div class="separator"></div>
                     </div>
                 </div>
 		</div>
 		<div class="row" style="margin-bottom: 50px;">
-			<div *ngFor="let item of news" class="col-sm-6 bcards" >
+			<div *ngFor="let item of news" class="col-sm-4 bcards" >
 				<div class="view view-first">
 				  <img style="width:500px; height:300px" src="{{basePathImage}}{{item.image}}" />
 				  <div class="mask">
