--- a/src/app/pages/home/timeline/timeline.component.css
+++ b/src/app/pages/home/timeline/timeline.component.css
@@ -19,7 +19,7 @@ body {
           transform: translate3d(0, 0, 0);
   position: relative;
   width: 24.3%;
-  height: 100vh;
+  /*height: 100vh;*/
   height: 500px;
   color: #fff;
   overflow: hidden;
@@ -45,7 +45,7 @@ body {
 }
 .tl-item:before {
   background: -webkit-linear-gradient(top, transparent 0%, black 75%);
-  background: linear-gradient(to bottom, transparent 0%, black 75%);
+  background: linear-gradient(to top, transparent 0%, black 75%);
   z-index: 1;
   opacity: 0;
   -webkit-transform: translate3d(0, 0, 0) translateY(50%);
@@ -108,8 +108,6 @@ body {
   -webkit-transform: translateX(-50%) translateY(-50%);
           transform: translateX(-50%) translateY(-50%);
   z-index: 1;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
 }
 .tl-year p {
   font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
@@ -142,5 +140,5 @@ body {
 	display: none;
 }
 .carousel-inner>.item {
-	display: block!important;
+	display: inline!important;
 }
