--- a/src/app/pages/measures/measures.component.html
+++ b/src/app/pages/measures/measures.component.html
@@ -1,26 +1,26 @@
 <section id="home" class="home">
-    <div class="overlay overlay-min">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 ">
+	<div class="overlay overlay-min">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 ">
 					<h1 style="text-align: -webkit-center;">
 						<img src="assets/images/logoconcilia.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
 					</h1>
-	            </div>
-            </div>
-        </div>
-    </div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 <section id="about" class="about">
 	<div class="container">
 		<div class="main_about_area sections" style="padding-bottom:0;">
 			<div class="row">
 				<div class="col-sm-12">
-		            <div class="head_title" style="margin-bottom: 50px;">
-		                <h3 style="font-size: 3rem;">PLANO DE PROVIDÊNCIAS</h3>
-		                <div class="separator"></div>
-		            </div>
-		        </div>
+					<div class="head_title" style="margin-bottom: 50px;">
+						<h3 style="font-size: 3rem;">PLANO DE PROVIDÊNCIAS</h3>
+						<div class="separator"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -79,33 +79,33 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<a target="_blank" href="#">
-	                <b>
-	                     <h5 class="text-center" style="margin:50px"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>&nbsp;&nbsp;
-	                        Acesse o plano de providências
+				<a target="_blank" href="{{actionPlan}}">
+					<b>
+						 <h5 class="text-center" style="margin:50px"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>&nbsp;&nbsp;
+							Acesse o plano de providências
 						</h5>
-	                </b>
-	            </a>
+					</b>
+				</a>
 			</div>
 		</div>
 	</div>
 </section>
 <section id="features" class="features">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="main_features_area sections" style="padding-top:0;padding-bottom:0;">
-                    <div class="head_title" style="margin-bottom: 0px;">
-                        <h3 style="font-size: 3rem;">CRITÉRIOS E REGRAS</h3>
-                        <div class="separator"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="main_features_area sections" style="padding-top:0;padding-bottom:0;">
+					<div class="head_title" style="margin-bottom: 0px;">
+						<h3 style="font-size: 3rem;">CRITÉRIOS E REGRAS</h3>
+						<div class="separator"></div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6">
 							<img src="assets/images/criterios_regras.jpg" alt="" style="padding-top:10%">
-                        </div><br>
-                        <div class="col-sm-6">
-                            <p class="font-124">Para que a execução do Concilia BR-381 e Anel seja viável e eficaz, é fundamental que sejam validados, por todas as partes, os critérios e regras que regerão cada uma das etapas do reassentamento das famílias que vivem na faixa de domínio da rodovia.</p>
-                            <p class="font-124">Essas diretrizes foram consolidadas em um documento específico, que aborda, entre outros assuntos:</p>
+						</div><br>
+						<div class="col-sm-6">
+							<p class="font-124">Para que a execução do Concilia BR-381 e Anel seja viável e eficaz, é fundamental que sejam validados, por todas as partes, os critérios e regras que regerão cada uma das etapas do reassentamento das famílias que vivem na faixa de domínio da rodovia.</p>
+							<p class="font-124">Essas diretrizes foram consolidadas em um documento específico, que aborda, entre outros assuntos:</p>
 
 							<ul class="single_ab_mision">
 								<li class="font-124">
@@ -146,21 +146,21 @@
 								</li>
 							</ul><br>
 							<p class="font-124">Esse documento foi revisado e validado pelo Conselho Executivo e, em seguida, homologado na Justiça Federal.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-		<div class="row">
-			<div class="col-sm-12">
-				<a target="_blank" href="#">
-	                <b>
-	                     <h5 class="text-center" style="margin:50px"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>&nbsp;&nbsp;
-	                        Acesse os critérios e regras
-						</h5>
-	                </b>
-	            </a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-    </div>
+		<div class="row">
+			<div class="col-sm-12">
+				<a target="_blank" href="{{criteriaRules}}">
+					<b>
+						 <h5 class="text-center" style="margin:50px"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>&nbsp;&nbsp;
+							Acesse os critérios e regras
+						</h5>
+					</b>
+				</a>
+			</div>
+		</div>
+	</div>
 </section>
