--- a/src/app/pages/medias/medias.component.html
+++ b/src/app/pages/medias/medias.component.html
@@ -12,18 +12,30 @@
     </div>
 </section>
 <section id="portfolio" class="portfolio lightbg" style="padding-top:100px;padding-bottom:100px">
-    <div class="container">
+    <div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 				<figure>
 					<img id="photo" src="/assets/images/test_new.jpg" alt="photo">
-					<figcaption id="caption">Fotos</figcaption>
+					<figcaption id="caption">Vila 1</figcaption>
 				</figure>
             </div>
-            <div class="col-sm-6" >
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 				<figure>
 					<img id="photo" src="/assets/images/test_new.jpg" alt="photo">
-					<figcaption id="caption">Videos</figcaption>
+					<figcaption id="caption">Vila 2</figcaption>
+				</figure>
+            </div>
+			<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+				<figure>
+					<img id="photo" src="/assets/images/test_new.jpg" alt="photo">
+					<figcaption id="caption">Vila 3</figcaption>
+				</figure>
+            </div>
+			<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+				<figure>
+					<img id="photo" src="/assets/images/test_new.jpg" alt="photo">
+					<figcaption id="caption">Vila 4</figcaption>
 				</figure>
             </div>
 		</div>
