--- a/src/app/pages/properties/properties.component.css
+++ b/src/app/pages/properties/properties.component.css
@@ -1,3 +1,22 @@
 .font-124 {
 	font-size: 1.24rem;
 }
+.font2-3 {
+	font-size: 2.3rem!important;
+}
+.separator {
+	height: 1px;
+	width: 300px;
+	margin: 20px 0px;
+	background: #444;
+	position: relative;
+}
+.separator:after {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 2px;
+	width: 100px;
+	background: #ff7200;
+	content: "";
+}
